First series of edits to template, including pages, stylesheets, layouts.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,69 +1,127 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+% tags for projects
+@string{repro = {reproducibility}}
+@string{calleva = {calleva}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{Munafo-et-al_2020,
+  title = {Research culture and reproducibility},
+  author = {Munaf{\`o}, Marcus R and Chambers, Christopher D and
+                  Collins, Alexandra M and Fortunato, Laura and
+                  Macleod, Malcolm R},
+  journal = {Trends in Cognitive Sciences},
+  volume = {24},
+  number = {2},
+  pages = {91--93},
+  year = {2020},
+  doi = {10.1016/j.tics.2019.12.002},
+  url = {https://doi.org/10.1016/j.tics.2019.12.002},
+  abbr = repro,
+  abstract = {There is ongoing debate regarding the robustness and
+                  credibility of published scientific research. We
+                  argue that these issues stem from two broad causal
+                  mechanisms: the cognitive biases of researchers and
+                  the incentive structures within which researchers
+                  operate. The UK Reproducibility Network (UKRN) is
+                  working with researchers, institutions, funders,
+                  publishers, and other stakeholders to address these
+                  issues.},
+  publisher = {Elsevier}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@phdthesis{Kenny_thesis,
+  author = {Kenny, Adam Robert}, 
+  title = {In-group bias in human cooperation: insights from
+                  the \emph{contrade} of {S}iena, {I}taly},
+  school = {University of Oxford},
+  year = {2020},
+  abbr = calleva,
+  abstract = {Cooperation in humans shows an in-group bias, with
+                  individuals more likely to benefit members of their
+                  own in-group than members of other out-groups. This
+                  thesis explores the effects of inter-group
+                  competition, group relationship, and shared identity
+                  on in-group bias, by conducting field experiments
+                  among communities in a historic Italian city, namely
+                  the \emph{contrade} of Siena. In Chapter 1, I review
+                  the literature on the evolution of cooperation and
+                  in-group bias. I then describe how field experiments
+                  that employ economic games can help elucidate
+                  in-group bias in the real world, before outlining
+                  how I conducted field experiments with the
+                  \emph{contrade}. I describe the \emph{contrade} in
+                  greater detail in Chapter 2, using research from my
+                  fieldwork among these communities to demonstrate the
+                  importance of group relationship in the Sienese
+                  context.  In experiment 1 (Chapter 3), I compare
+                  in-group and out-group cooperation during a period
+                  characterised by low competition vs. high
+                  competition. There is no evidence for an effect of
+                  competition. However, there is a significant effect
+                  of group relationship, with more cooperation among
+                  neutral out-groups compared to rival out-groups. In
+                  experiment 2 (Chapter 4), I analyse third-party
+                  punishment decisions and participants'
+                  interpretations of the experiment, to assess whether
+                  cooperation within and between \emph{contrade} is
+                  supported by social norms. There is limited support
+                  for third-party punishment sustaining norms
+                  governing either in-group or out-group behaviour. In
+                  experiment 3 (Chapter 5), I explore the effect of
+                  shared identity on in-group bias, by seeing if a
+                  ``common enemy'' encourages out-group
+                  cooperation. The common enemy neither increases the
+                  perceptions of shared identity nor decreases
+                  in-group bias.  I conclude with a meta-analysis in
+                  Chapter 6, which reveals an overall strong in-group
+                  bias among the \emph{contrade}. The bias is
+                  influenced by the relationship between the groups,
+                  but is unaffected by the level of competition and
+                  attempts to induce a shared identity. This thesis
+                  shows that group identities in the real world have a
+                  significant impact on social behaviour.}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{Fortunato_2019,
+  author = {Fortunato, Laura},
+  title = {Lineal kinship organization in cross-specific perspective},
+  journal = {Philosophical Transactions of the Royal Society B:
+                  Biological Sciences},
+  volume = {374},
+  number = {1780},
+  pages = {20190005},
+  year = {2019},
+  doi = {10.1098/rstb.2019.0005},
+  url = {https://royalsocietypublishing.org/doi/abs/10.1098/rstb.2019.0005},
+  abstract = {I draw on insights from anthropology to outline a
+                  framework for the study of kinship systems that
+                  applies across animal species with biparental sexual
+                  reproduction. In particular, I define lineal kinship
+                  organization as a social system that emphasizes
+                  interactions among lineally related kin --- that is,
+                  individuals related through females only, if the
+                  emphasis is towards matrilineal kin, and individuals
+                  related through males only, if the emphasis is
+                  towards patrilineal kin. In a given population, the
+                  emphasis may be expressed in one or more social
+                  domains, corresponding to pathways for the
+                  transmission of different resources across
+                  generations (e.g.\ the allocation of food, the
+                  transfer of access to the natal territory or
+                  household). A lineal bias in any domain can be
+                  viewed as a bias in investment towards a particular
+                  set of kin --- specifically, towards the offspring
+                  of daughters if the bias is matrilineal, and towards
+                  the offspring of sons if the bias is
+                  patrilineal. Effectively, investment is restricted
+                  to the offspring of the females in the population in
+                  one case, and to the offspring of the males in the
+                  other. This is distinct from a bias in investment
+                  towards daughters and towards sons,
+                  respectively. Overall, I propose a shift in
+                  focus---from viewing matrilineal and patrilineal
+                  kinship as unitary phenomena, to consideration of
+                  the different aspects of the social system featuring
+                  a bias towards lineally related kin. }
 }
